--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <meta charset="utf-8">
+  <!-- Google fonts -->
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+
   <title>Tic Tac Toe</title>
 </head>
 
